Update ListExamplesTests.java